# fit

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Dockerfile  README.md  conftest.py  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
configs/: default.yaml
core/: autograd.py  checks.py  tensor.py
docker/: docker-compose.yml
docs/: conf.py  index.rst  installation.rst  quickstart.rst  requirements.txt
docs/_static/: custom.css
docs/api/: core.rst  data.rst  ensemble.rst  loss.rst  monitor.rst  nn.rst  optim.rst  simple.rst  utils.rst
docs/examples/: advanced.rst  basic.rst  index.rst
docs/tutorials/: index.rst
examples/: autograd_xor_demo.py  hem_optimizer_comparison.py  mnist.py  neural_ode_example.py  nn_diagnostics.py  optimizer_comparison.py  sam_example.py  sam_xor_example.py  tanh_xor.py  xor_example.py  xor_hem.py  xor_snorm.py
examples/advanced/: neural_ode_example.py  optimizer_comparison.py  sam_example.py
examples/basic/: autograd_xor_demo.py  mnist.py  xor_example.py
examples/notebooks/: intro.ipynb
fit/: __init__.py  compat.py  run_all_tests.py  test_basic_tensor.py  test_kaggle_features.py  test_neural_network.py  test_training.py
fit/core/: autograd.py  ops.py  tensor.py
fit/data/: dataloader.py  dataset.py  feature_selection.py  preprocessing.py  validation.py
fit/ensemble/: base.py  boosting.py  voting.py
fit/loss/: classification.py  experimental.py  regression.py
fit/metrics/: classification.py  regression.py
fit/monitor/: tracker.py
fit/nn/modules/: activation.py  attention.py  base.py  container.py  linear.py  normalization.py  transformer.py
fit/nn/utils/: model_io.py  neural_ode.py  spectral_norm.py
fit/optim/: adam.py  sgd.py
fit/optim/experimental/: lion.py  sam.py
fit/simple/: data.py  models.py  trainer.py
fit/utils/: engine.py  ode_solvers.py  regularization.py  trainer.py
monitor/: tracker.py
nn/: activations.py  initialization.py  layer.py  linear.py  model_io.py  neural_ode.py  normalization.py  sequential.py
tests/: test_nn.py  test_ops.py  test_optim.py  test_optim_sam.py  test_tanh.py  test_tensor.py  test_trainer.py
tests/unit/core/: test_autograd.py  test_tensor.py
train/: engine.py  hem_loss.py  loss.py  optim.py  optim_lion.py  optim_sam.py  scheduler.py  trainer.py
utils/: data.py  ode_solvers.py  regularization.py
