[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fit"
version = "0.8.0"
description = "ML/DL library built from scratch with PyTorch-like API"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Åukasz Bielaszewski", email = "lukaszbielaszewskibiz@gmail.com"}]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "pyyaml>=6.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
examples = [
    "matplotlib>=3.5.0",
    "jupyter>=1.0.0",
    "notebook>=6.4.0",
    "scikit-learn>=1.1.0",
    "pandas>=1.4.0",
]

[project.urls]
Homepage = "https://github.com/Klus3kk/fit"
Repository = "https://github.com/Klus3kk/fit"

[tool.setuptools.packages.find]
include = ["fit*"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov=fit"]